# hoopR-nba-data

./: .Rbuildignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.md  README.md
.github/: copilot-instructions.md  pull_request_template.md
R/: 0000_create_hoopR_releases_init.R  0001_push_existing_release_data.R  espn_nba_01_pbp_creation.R  espn_nba_02_team_box_creation.R  espn_nba_03_player_box_creation.R  espn_nba_04_rosters_creation.R  espn_nba_05_player_season_stats_creation.R  espn_nba_06_team_season_stats_creation.R  espn_nba_07_standings_creation.R  espn_nba_08_draft_creation.R  espn_nba_09_game_rosters_creation.R  espn_nba_10_officials_creation.R  manifest_upload_helper.R  nba_11_team_crosswalk_creation.R  nba_12_schedule_crosswalk_creation.R  nba_13_player_crosswalk_creation.R  run_summary.R  serialize_rds.R
nba/: nba_games_in_data_repo.parquet  nba_schedule_master.parquet
nba/draft/rds/: draft_2025.rds  (+1 more)
python/: .gitignore  README.md  pyproject.toml
python/nba_data_build/: __init__.py  __main__.py  _logging.py  build.py  cli.py  config.py  ingest.py  io.py  publish.py  reshapers.py
python/tests/nba_data_build/: _parity_helpers.py  conftest.py  test_build.py  test_cli.py  test_ingest.py  test_io.py  test_logging.py  test_manifest_and_backfills.py  test_parity_draft.py  test_parity_game_rosters.py  test_parity_pbp.py  test_parity_player_box.py  test_parity_schedules.py  test_parity_season_datasets.py  test_parity_shots.py  test_parity_team_box.py  test_publish.py
scripts/: daily_nba_R_processor.sh  daily_nba_python_processor.sh
(+460 files in other folders)
